[build-system]
requires = ["setuptools>=45",
            "setuptools_scm[toml]>=6.2",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "hermes_eea"
description = "A Python package to process and analyze data from the HERMES eea instrument."
readme = "README.rst"
dynamic = ["version"]
authors = [{name = "Steven Christe", email="steven.d.christe@nasa.gov"},
           {name = "Damian Barrous Dumme", email="damianbarrous@gmail.com"}]
license = {file = "LICENSE.rst"}
requires-python = ">=3.9"
keywords = ["hermes", "nasa mission", "space weather"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache 2.0",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  'hermes_core @ git+https://github.com/HERMES-SOC/hermes_core/',
  'ccsdspy @ git+https://github.com/ddasilva/ccsdspy.git',
  'ndcube>=2.1.3', # Temporary while not part of hermes_core
]

[project.optional-dependencies]
dev = [
  'coverage>=5.0.3',
  'pytest',
  'pytest-astropy',
  'pytest-cov',
  'black',
  'flake8',
  'coverage[toml]'
]

docs = [
  'sphinx',
  'sphinx-automodapi'
]

test = [
  'pytest',
  'pytest-astropy',
  'pytest-cov',
  'coverage[toml]'
]

style = [
  'black',
  'flake8'
]

[tool.setuptools.package-data]
"hermes_eea.data" = ["**"]

[tool.setuptools]
packages = ["hermes_eea"]

[tool.setuptools_scm]
write_to = "hermes_eea/_version.py"

[tool.pytest.ini_options]
testpaths = [
   "hermes_eea/tests",
   "docs"
]

[tool.coverage.run]
omit = [
  'hermes_eea/__init*',
  'hermes_eea/conftest.py',
  'hermes_eea/*setup_package*',
  'hermes_eea/tests/*',
  'hermes_eea/*/tests/*',
  'hermes_eea/extern/*',
  'hermes_eea/version*',
  '*/hermes_eea/__init*',
  '*/hermes_eea/conftest.py',
  '*/hermes_eea/*setup_package*',
  '*/hermes_eea/tests/*',
  '*/hermes_eea/*/tests/*',
  '*/hermes_eea/extern/*',
  '*/hermes_eea/version*',
]

[tool.black]
extend-exclude = '''hermes_eea/_version.py'''
